Add simple structure.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<title>Me...</title>
+		<link href="assets/css/main.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>Under construction...</h1>
+		<div id="main-container">
+			<div id="sidebar">Sidebar</div>
+			<div id="content-area">Content</div>
+		</div>
 	</body>
 </html>
 
