--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Me...</title>
+		<title>Mousa Moradi - CV</title>
 		<link href="assets/css/main.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
