Add german language.

--- a/index.html
+++ b/index.html
@@ -329,6 +329,10 @@
                                     <span class="title"><strong>Turkish:</strong></span>
                                     <span class="level">Intermediate <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star-half"></i></span>
                                 </li><!--//item-->
+                                <li class="item">
+                                    <span class="title"><strong>German:</strong></span>
+                                    <span class="level">Basic <br class="visible-sm visible-xs"/><i class="fas fa-star"></i></span>
+                                </li><!--//item-->
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
