--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
                 <div class="summary">
-                    <p>I am software engineer with more than 10 years of experience. I have worked in different areas of software developmeent, including Web, Desktop and Mobile app development, however, my current career and specialty is mainly Android development. You can download the pdf version of my cv from <a target="_blank" href="downloads/MousaMoradi_CV_md.pdf">here</a>.</p>
+                    <p>I am software engineer with more than 10 years of experience. I have worked in different areas of software developmeent, including Web, Desktop and Mobile app development, however, my current career and specialty is mainly Android development. The PDF version of my CV is available <a target="_blank" href="downloads/MousaMoradi_CV_md.pdf">here</a>.</p>
                     <p>I am flexible and can adapt to new technologies, frameworks, languages, and concepts. I am a team worker and I communicate and cooperate well with other team members. I produce high-quality software and clean code; to do so, I insist on using best practices, design patterns, and architectural patterns, adhering to OOP principles, sticking to the chosen methodology's rules, having high test coverage, and etc.</p>
 
                 </div><!--//summary-->
