--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="linkedin"><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/mousa-moradi/" target="_blank"> Linkedin Mousa Moradi</a></li>
-                    <li class="twitter"><i class="fab fa-stack-overflow"></i><a href="https://stackoverflow.com/users/1385489/mousa" target="_blank"> Stackoverflow Mousa</a></li>
+                    <li class="linkedin"><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/mousa-moradi/" target="_blank"> Mousa Moradi</a></li>
+                    <li class="twitter"><i class="fab fa-stack-overflow"></i><a href="https://stackoverflow.com/story/mousa-moradi" target="_blank"> Mousa</a></li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/mousamk" target="_blank"> @mousamk</a></li>
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto:mousamk@gmail.com"> mousamk@gmail.com</a></li>
                     <li class="phone"><i class="fas fa-phone"></i><a href="tel:0989144921058"> +98(914)492-1058</a></li>
