--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ I also developed a native Driver for their Braille monitor in C language for And
                     <div class="item">
                         <h3 class="level-title">Java &amp; Kotlin</h3>
                         <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>                              
                     </div><!--//item-->
 
@@ -261,7 +261,7 @@ I also developed a native Driver for their Braille monitor in C language for And
                     <div class="item">
                         <h3 class="level-title">Design Patterns</h3>
                         <div class="progress level-bar">
-							    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+							    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>                                
                     </div><!--//item-->
                     
@@ -280,9 +280,9 @@ I also developed a native Driver for their Braille monitor in C language for And
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Reactive Programming</h3>
+                        <h3 class="level-title">Reactive Programming (RxJava, RxKotlin)</h3>
                         <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>                                 
                     </div><!--//item-->
 
@@ -315,7 +315,7 @@ I also developed a native Driver for their Braille monitor in C language for And
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">C++ &amp; Qt framework</h3>
+                        <h3 class="level-title">SQL, SQLite, MySQL/MariaDB</h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>                              
