Add location section.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                     <li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/mousa_mk" target="_blank"> @mousa_mk</a></li>
                 </ul>
             </div><!--//contact-container-->
+
+            <div class="location-container container-block">
+                <h2 class="container-block-title">Location</h2>
+                <ul class="list-unstyled interests-list">
+                    <li>Tehran, Iran</li>
+                    <i>(Willing to relocate)</i>
+                </ul>
+            </div>
+
             <!--div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
