Update introduction and CV

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="linkedin"><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/mousa-moradi/" target="_blank"> Mousa Moradi</a></li>
-                    <li class="twitter"><i class="fab fa-stack-overflow"></i><a href="https://stackoverflow.com/story/mousa-moradi" target="_blank"> Mousa</a></li>
+                    <li class="stackoverflow"><i class="fab fa-stack-overflow"></i><a href="https://stackoverflow.com/story/mousa-moradi" target="_blank"> Mousa Moradi</a></li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/mousamk" target="_blank"> @mousamk</a></li>
                     <li class="email"><i class="fas fa-envelope"></i><a href="mailto:mousamk@gmail.com"> mousamk@gmail.com</a></li>
                     <li class="phone"><i class="fas fa-phone"></i><a href="tel:0989144921058"> +98(914)492-1058</a></li>
@@ -92,14 +92,15 @@
             <section class="section summary-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
                 <div class="summary">
-                    <p>I am software engineer with more than 10 years of experience. I have worked in different areas of software developmeent, including Web, Desktop and Mobile app development, however, my current career and specialty is mainly Android development. The PDF version of my CV is available <a target="_blank" href="download/MousaMoradi_CV_md.pdf">here</a>.</p>
-                    <!--p>I am flexible and can adapt to new technologies, frameworks, languages, and concepts. I am a team worker and I communicate and cooperate well with other team members. I produce high-quality software and clean code; to do so, I insist on using best practices, design patterns, and architectural patterns, adhering to OOP principles, sticking to the chosen methodology's rules, having high test coverage, and etc.</p-->
+                    <p>I am a software engineer with more than 10 years of experience in Desktop, Web, and Mobile application development. My current career and speciality is mainly Android development.</p>
+                    <p>I am a team player; I am always learning new technologies, languages, and concepts; I adhere to software engineering principles and best practices in order to produce clean code and high-quality software.</p>
+                    <p>The more detailed PDF version of my CV is available <a target="_blank" href="download/MousaMoradi_CV.pdf">here</a>.</p>
 
                 </div><!--//summary-->
             </section><!--//section-->
             
             <section class="section experiences-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiences</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Work Experience</h2>
                 
                 <div class="item">
                     <div class="meta">
@@ -202,7 +203,7 @@ I also developed a native Driver for their Braille monitor in C language for And
                     <h5 class="meta"><a href="http://www.en.sharif.edu/" target="_blank">Sharif University of Technology</a></h5>
                     <div class="timerange">2011 - 2013</div>
                     <div class="details">
-                        <i>(Sharif University is the rank 1st university of Iran and 5th of the Middle East)</i>
+                        <i>(Sharif University is the number one university of Iran and ranks 5th in the Middle East)</i>
                     </div>
                 </div><!--//item-->
                 <div class="item education-item">
