Update location to barcelona.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <div class="location-container container-block">
                 <h2 class="container-block-title">Location</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Tehran, Iran</li>
-                    <i>(Willing to relocate)</i>
+                    <li>Barcelona, Spain</li>
                 </ul>
             </div>
 
