--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                     <li>English <span class="lang-desc">(Fluent)</span></li>
                     <li>Persian <span class="lang-desc">(Native)</span></li>
                     <li>Azerbaijani <span class="lang-desc">(Native)</span></li>
-                    <li>Esperanto <span class="lang-desc">(Proficient)</span></li>
                     <li>Turkish <span class="lang-desc">(Intermediate)</span></li>
-                    <li>German <span class="lang-desc">(Basic)</span></li>
+                    <li>Spanish <span class="lang-desc">(Basic)</span></li>
                 </ul>
             </div><!--//interests-->
             
